--- a/index.html
+++ b/index.html
@@ -3,22 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Landing Page</title>
+  <title>Hear the Good News!</title>
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-  <div id="featured">
-    <h1>Welcome</h1>
-    <p>Here's the Hope you've been looking for! The Gift of Eternal Life!
-      1. Realize that you are a sinner. Romans 3:23 - 'For all have sinned, and come short of the glory of God.'
-      2. Realize that you need to be forgiven of your sins. Romans 6:23 - 'For the wages of sin is death; but the gift of God is eternal life through Jesus Christ our Lord.'
-      3. Realize that Jesus loves you and wants to forgive you. Romans 10:13 - 'For whosoever shall call upon the name of the Lord shall be saved.'
-    </p>
-    <p>
-      Dear Jesus, have mercy unto me a sinner. Come into my heart and forgive me of my sins. I claim You as my Savior and I place my trust solely on You. Amen.
-      Just saying this prayer alone won't save you, but putting your faith in Jesus and believing He will answer the prayer will. For with the heart man believeth unto righteousness; and with the mouth confession is made unto salvation. Romans 10:10 (KJV)
-    </p>
-  </div>
+  <header>
+    <h1>Jesus Saves!</h1>
+  </header>
+
+  <hr class="divider white">
+
+  <main id="feature">
+    <p class="feature-heading">Here's the Hope you've been looking for! The Gift of Eternal Life!</p>
+
+    <section class="card">
+      <h1>1. Realize that you are a sinner.</h1>
+      <hr class="divider">
+      <p>
+        <span class="verse">Romans 3:23</span> — "For all have sinned, and come short of the glory of God."
+      </p>
+    </section>
+
+    <section class="card">
+      <h1>2. Realize that you need to be forgiven of your sins.</h1>
+      <hr class="divider">
+      <p>
+        <span class="verse">Romans 6:23</span> — "For the wages of sin is death; but the gift of God is eternal life through Jesus Christ our Lord."
+      </p>
+    </section>
+
+    <section class="card">
+      <h1>3. Realize that Jesus loves you and wants to forgive you.</h1>
+      <hr class="divider">
+      <p>
+        <span class="verse">Romans 10:13</span> — "For whosoever shall call upon the name of the Lord shall be saved."
+      </p>
+    </section>
+
+    <section class="card">
+      <p class="highlight-message">
+        Dear Jesus, have mercy unto me a sinner. Come into my heart and forgive me of my sins. I claim You as my Savior and I place my trust solely on You. Amen.
+      </p>
+      <br>
+      <p>
+        Just saying this prayer alone won't save you, but putting your faith in Jesus and believing He will answer the prayer will.
+      </p>
+      <hr class="divider">
+      <p>
+        <span class="verse">Romans 10:10</span> - "For with the heart man believeth unto righteousness; and with the mouth confession is made unto salvation."
+      </p>
+    </section>
+  </main>
 
   <script src="./assets/js/main.js"></script>
 </body>
