WEBSITE-3 : Updated cards and fixed mobile responsiveness.
Changes to be committed:
	modified:   assets/css/styles.css
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         Dear Jesus, have mercy unto me a sinner. Come into my heart and forgive me of my sins. I claim You as my Savior and I place my trust solely on You. Amen.
       </p>
       <br>
-      <p>
-        Just saying this prayer alone won't save you, but putting your faith in Jesus and believing He will answer the prayer will.
+      <p class="highlight-message">
+        Just saying this prayer alone won't save you, but putting your faith in Jesus and believing will.
       </p>
       <hr class="divider">
       <p>
