WEBSITE-5 : Made revisions to the webpage layout
Made the webpage a little nicer with smoother transition
between backgrounds. Added a mobile bg for scaling.

Changes to be committed:
	modified:   assets/css/styles.css
	modified:   assets/images/distant_cross.png
	new file:   assets/images/distant_cross_mobile.png
	modified:   assets/images/sunset_cross.png
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -7,52 +7,53 @@
   <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+
   <header>
-    <h1>Jesus Saves!</h1>
+    <h1 class="hope">Hear the Good News!</h1>
+    <p class="header-subtext">Here's the Hope you've been looking for! The Gift of Eternal Life!</p>
   </header>
 
-  <hr class="divider white">
 
-  <main id="feature">
-    <p class="feature-heading">Here's the Hope you've been looking for! The Gift of Eternal Life!</p>
-
-    <section class="card">
-      <h1>1. Realize that you are a sinner.</h1>
-      <hr class="divider">
-      <p>
-        <span class="verse">Romans 3:23</span> — "For all have sinned, and come short of the glory of God."
-      </p>
-    </section>
-
-    <section class="card">
-      <h1>2. Realize that you need to be forgiven of your sins.</h1>
-      <hr class="divider">
-      <p>
-        <span class="verse">Romans 6:23</span> — "For the wages of sin is death; but the gift of God is eternal life through Jesus Christ our Lord."
-      </p>
-    </section>
-
-    <section class="card">
-      <h1>3. Realize that Jesus loves you and wants to forgive you.</h1>
-      <hr class="divider">
-      <p>
-        <span class="verse">Romans 10:13</span> — "For whosoever shall call upon the name of the Lord shall be saved."
-      </p>
-    </section>
-
-    <section class="card">
-      <p class="highlight-message">
-        Dear Jesus, have mercy unto me a sinner. Come into my heart and forgive me of my sins. I claim You as my Savior and I place my trust solely on You. Amen.
-      </p>
-      <br>
-      <p class="highlight-message">
-        Just saying this prayer alone won't save you, but putting your faith in Jesus and believing will.
-      </p>
-      <hr class="divider">
-      <p>
-        <span class="verse">Romans 10:10</span> - "For with the heart man believeth unto righteousness; and with the mouth confession is made unto salvation."
-      </p>
-    </section>
+  <main>
+    <div id="feature">
+      <section class="card">
+        <h1>1. Realize that you are a sinner.</h1>
+        <hr class="divider">
+        <p>
+          <span class="verse">Romans 3:23</span> — "For all have sinned, and come short of the glory of God."
+        </p>
+      </section>
+  
+      <section class="card">
+        <h1>2. Realize that you need to be forgiven of your sins.</h1>
+        <hr class="divider">
+        <p>
+          <span class="verse">Romans 6:23</span> — "For the wages of sin is <span class="red">death</span>; but the gift of God is eternal life through <span class="hope">Jesus Christ</span> our Lord."
+        </p>
+      </section>
+  
+      <section class="card">
+        <h1>3. Realize that Jesus loves you and wants to forgive you.</h1>
+        <hr class="divider">
+        <p>
+          <span class="verse">Romans 10:13</span> — "For whosoever shall call upon the name of the Lord shall be saved."
+        </p>
+      </section>
+  
+      <section class="card">
+        <p class="highlight-message">
+          Dear <span class="hope">Jesus</span>, have mercy unto me a sinner. Come into my heart and forgive me of my sins. I claim You as my Savior and I place my trust solely on You.<br><span class="hope large-text">Amen.</span>
+        </p>
+        <br>
+        <p class="highlight-message">
+          Just saying this prayer alone won't save you, but putting your faith and belief in Jesus Christ will.
+        </p>
+        <hr class="divider">
+        <p>
+          <span class="verse">Romans 10:10</span><span class="white"> - "For with the heart man believeth unto righteousness; and with the mouth confession is made unto salvation."</span>
+        </p>
+      </section>
+    </div>
   </main>
 
   <script src="./assets/js/main.js"></script>
