WEBSITE-6 : Updated verse text to white color. Changes to be committed: 	modified:   assets/css/styles.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>1. Realize that you are a sinner.</h1>
         <hr class="divider">
         <p>
-          <span class="verse">Romans 3:23</span> — "For all have sinned, and come short of the glory of God."
+          <span class="verse">Romans 3:23</span><span class="white">  — "For all have sinned, and come short of the glory of God."</span>
         </p>
       </section>
   
@@ -28,7 +28,7 @@
         <h1>2. Realize that you need to be forgiven of your sins.</h1>
         <hr class="divider">
         <p>
-          <span class="verse">Romans 6:23</span> — "For the wages of sin is <span class="red">death</span>; but the gift of God is eternal life through <span class="hope">Jesus Christ</span> our Lord."
+          <span class="verse">Romans 6:23</span><span class="white"> — "For the wages of sin is <span class="red">death</span>; but the gift of God is eternal life through <span class="hope">Jesus Christ</span> our Lord."</span>
         </p>
       </section>
   
@@ -36,7 +36,7 @@
         <h1>3. Realize that Jesus loves you and wants to forgive you.</h1>
         <hr class="divider">
         <p>
-          <span class="verse">Romans 10:13</span> — "For whosoever shall call upon the name of the Lord shall be saved."
+          <span class="verse">Romans 10:13</span><span class="white"> — "For whosoever shall call upon the name of the Lord shall be saved."</span>
         </p>
       </section>
   
